# opendev-py

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  RESTART_REQUIRED.md  RETIRED.md  ROADMAP.md  SETTINGS_SYNC.md  __main__.py  cli.py.bak  conftest.py  e2e_conversation_summarizer.py  e2e_full_cli_summarizer.py  e2e_react_executor_summarizer.py  e2e_session_persistence.py  e2e_think_tool_test.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  tailwind.config.ts  terminal_info.sh  test_ace_integration.py  test_approval_constants.py  test_approval_prompt_controller_interrupt.py  test_ask_user_handler.py  test_ask_user_subagent.py  test_block_registry.py  test_bridge_callback.py  test_bridge_mode_routing.py  test_bridge_user_message.py  test_builtin_skills.py  test_bullet_selector.py  test_channels.py  test_collapsible_output.py  test_context_compaction.py  (+90 more)
cli/: main.py  non_interactive.py
config/: __init__.py  models.py  models_dev_loader.py
core/: errors.py  file_watcher.py  logging.py  paths.py  scheduler.py  skills.py
docs/: providers.md
input/: __init__.py
integration/: test_modular_composition.py  test_prompt_variables.py  test_system_prompt_composition.py  test_tool_descriptions.py
manual/: test_alternate_screen.py  test_console_capture.py  test_console_debug.py  test_debug_runner.py  test_duplication_fix.py  test_final_verification.py  test_full_flow.py  test_no_duplication_fix.py  test_playbook_integration.py  test_runner_integration.py  test_simple_ui.py  test_textual_poc.py  test_textual_runner.py  test_textual_ui.py  test_textual_ui_clear.py
models/: __init__.py  agent_deps.py  config.py  file_change.py  message.py  operation.py  session.py  session.py.bak  user.py
opendev/: __init__.py
repl/: __init__.py  file_content_injector.py  llm_caller.py  query_enhancer.py  query_processor.py  react_loop.py  repl.py  tool_executor.py
setup/: providers.py  wizard.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tests/: __init__.py  e2e_conversation_summarizer.py  e2e_full_cli_summarizer.py  e2e_think_tool_test.py  test_ace_integration.py  test_agent_creator_controller.py  test_approval_prompt_controller_interrupt.py  test_ask_user_subagent.py  test_batch_tool.py  test_block_registry.py  test_bridge_callback.py  test_bridge_user_message.py  test_builtin_skills.py  test_bullet_selector.py  test_channels.py  test_cli_non_interactive.py  test_command_history.py  test_context_compaction.py  test_conversation_log_interrupt.py  test_conversation_summarizer.py  test_core_base.py  test_core_utils.py  test_cross_project_resume.py  test_display_ledger.py  test_docker_tool_handler.py  test_explore_first.py  test_file_content_injector.py  test_file_locks.py  test_gitignore_filtering.py  test_hooks.py  test_http_client_retry.py  test_input_provenance.py  test_interrupt_bash.py  test_interrupt_display.py  test_interrupt_guards.py  test_interrupt_phase_boundaries.py  test_interrupt_textual.py  test_interrupt_token_unified.py  test_interrupt_token_wiring.py  test_interrupt_tool_execution.py  (+58 more)
ui_textual/: __init__.py  autocomplete.py  bridge_callback.py  callback_interface.py  chat_app.py  constants.py  debug_logger.py  nested_callback.py  runner.py  style_tokens.py
(+902 files in other folders)
